Fixes layout issues and adds resume pdf

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -56,12 +56,6 @@ footer {
     display: none;
 }
 
-#top-intro-container {
-    width: 100%;
-    justify-content: space-between;
-    padding: 0 1em;
-}
-
 #heading-container {
     margin-top: 6em;
 }
@@ -77,13 +71,6 @@ footer {
 
 #learn-more {
     margin-top: 25px;
-}
-
-#recent-project-cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 25px 0;
 }
 
 
@@ -178,12 +165,20 @@ footer {
     justify-content: space-evenly;
 }
 
-.about {
-    justify-content: space-evenly;
+.top-intro-container {
+    width: 100%;
+    justify-content: space-between;
+    /* padding: 0 1em; */
 }
 
 .tucker-photo {
     height: 400px;
+}
+
+.project-cards-container {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 25px 0;
 }
 
 .project-card {
@@ -397,16 +392,16 @@ transform: translate(-50%, calc(-100% - 5px)) rotate(45deg);
         font-size: 1.2em;
     }
 
+    /* #about-text-container {
+        width: 80%;
+    } */
+
     .tucker-photo {
         height: 300px;
     }
 }
 
 @media screen and (max-width: 768px) {
-
-    /* TODO:
-        -Add responsiveness to main elements of page
-    */
 
     footer {
         padding: 35px 0 10px 0;
@@ -421,19 +416,20 @@ transform: translate(-50%, calc(-100% - 5px)) rotate(45deg);
         height: 100vh;
         width: 100vw;
         margin-top: 5em;
+        z-index: 2;
     }
 
     #hamburger-icon {
         display: block;
     }
 
-    #top-intro-container {
-        flex-direction: column;
-    }
-
     #heading-container {
         text-align: center;
         margin-top: 0;
+    }
+
+    #about-text-container {
+        width: 100%;
     }
 
     #bottom-intro-container {
@@ -442,6 +438,16 @@ transform: translate(-50%, calc(-100% - 5px)) rotate(45deg);
 
     #footer-nav {
         margin-bottom: 25px;
+    }
+
+
+    .intro {
+        height: auto;
+    }
+
+
+    .top-intro-container {
+        flex-direction: column;
     }
 
     .footer-flex {
@@ -470,7 +476,7 @@ transform: translate(-50%, calc(-100% - 5px)) rotate(45deg);
 
 
 @media  screen and (max-height: 750px) {
-    #intro {
+    .intro {
         justify-content: flex-start;
     }
     
